完成CAP分布式demo

--- a/WithSalt.Cap.Demo/WithSalt.Cap.Publisher/appsettings.json
+++ b/WithSalt.Cap.Demo/WithSalt.Cap.Publisher/appsettings.json
@@ -7,8 +7,14 @@
     }
   },
   "AllowedHosts": "*",
+  "RabbitMQ": {
+    "HostName": "192.168.23.31",
+    "Port": "5672",
+    "UserName": "admin",
+    "Password": "admin",
+    "VirtualHost": "my_rabbit_vhost"
+  },
   "ConnectionStrings": {
-    "NpgsqlDbConnectionString": "Server=server.geeiot.net;Port=5432;Database=cap_db;User Id=cap_user;Password=b30aKQRzPlLzKqCp;Timeout=10;",
-    "RabbitMQConnectionString": "Server=berrypi.net;Port=5432;Database=berrypidb;User Id=berrypidbuser;Password=gCIiOB1SrUnlp4wW;Timeout=10;"
+    "NpgsqlDbConnectionString": "Server=192.168.23.31;Port=5432;Database=cap_db;User Id=cap_user;Password=b30aKQRzPlLzKqCp;Timeout=10;"
   }
 }
