--- a/WithSalt.Cap.Demo/WithSalt.Cap.Subscriber/appsettings.json
+++ b/WithSalt.Cap.Demo/WithSalt.Cap.Subscriber/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "HostName": "192.168.23.31",
+    "Port": "5672",
+    "UserName": "admin",
+    "Password": "admin",
+    "VirtualHost": "my_rabbit_vhost"
+  },
+  "ConnectionStrings": {
+    "NpgsqlDbConnectionString": "Server=192.168.23.31;Port=5432;Database=cap_db;User Id=cap_user;Password=b30aKQRzPlLzKqCp;Timeout=10;"
+  }
 }
