--- a/WithSalt.Cap.Demo/WithSalt.Cap.Publisher/WithSalt.Cap.Publisher.csproj
+++ b/WithSalt.Cap.Demo/WithSalt.Cap.Publisher/WithSalt.Cap.Publisher.csproj
@@ -7,9 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetCore.CAP" Version="3.1.2" />
+    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="3.1.2" />
     <PackageReference Include="DotNetCore.CAP.PostgreSql" Version="3.1.2" />
     <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.1" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
